4 August 2005 Sylvain Pion
- Move Twotuple, Threetuple, Fourtuple, Sixtuple to STL_Extension.
- Remove unused New_delete_allocator.h .
- Move CGAL/known_bit_size_integers.h to Number_types.

1 August 2005 Sylvain Pion
- Remove CGAL/misc.h (provided convert(), to be replaced by NT_converter).

31 July 2005 Sylvain Pion
- Add missing include in last change.

30 July 2005 Sylvain Pion
- Add Vector_2::operator/(FT).

25 July 2005 Andreas Fabri
- doc : Fix Kernel_traits<T> which mentioned T::Kernel instead of T::R.

25 July 2005 Andreas Fabri
- Added qualified result type to Circle_2::compute_squared_radius

22 July 2005 Andreas Fabri
- Added Qualified_result_of<> for Circle_2.center()

20 July 2005 Andreas Fabri
- Added qualified_result_type

9 July 2005 Sylvain Pion
- Object : add object_cast<>() and .type().
- Doc : merge assign.tex and make_object.tex in Object.tex.

18 June 2005 Andreas Fabri
- Moved code from Kernel_class_2 to the functors

12 June 2005 Sylvain Pion
- Add function operator in Construct_{min|max}_vertex_[23] taking
  Segment_[23].

30 May 2005 Sylvain Pion
- Handle_for : add unique() and use_count() (as in tr1::shared_ptr).

28 May 2005 Sylvain Pion
- More on Kernel/Dimension_utils.h.

27 May 2005 Sylvain Pion
- Add more tools to abstract away dimension in Kernel/Dimension_utils.h.

26 May 2005 Sylvain Pion
- Add Dimension<> tool to get the static dimension of kernel objects.

19 May 2005 Sylvain Pion
- Add centroid(Triangle_[23]) and centroid(Tetrahedron_3).

11 May 2005 Sylvain Pion
- New predicates : orientation(3 Vector_3) and orientation(2 Vector_2).

26 April 2005 Sylvain Pion
- Fix rational_rotation bug (by Daniel).

26 March 2005 Sylvain Pion
- Handle_for : remove "optimization" of default ctor.
  It's painful to use, and is there really a need to optimize default ctors ?

8 March 2005 Sylvain Pion
- Add do_intersect(Triangle_3, Tetrahedron_3) by Nico Kruithof.

6 February 2005 Sylvain Pion